[Fix #118] Fixed comment dialog that was hidden when accordion was collapsed

--- a/src/styles/s-forms.css
+++ b/src/styles/s-forms.css
@@ -115,7 +115,7 @@ input:disabled {
 }
 
 .accordion > .card {
-  overflow: visible;
+  overflow: visible !important;
 }
 
 .react-datepicker-wrapper {
